Updated Individual items content

--- a/sponsor.html
+++ b/sponsor.html
@@ -537,34 +537,228 @@
 					<p>The following items can be purchased individually. For more info on prices associated with these elements, contact the committee member assigned to contact your company.</p>
 
 					<div class="container">
-						<div class="heading">Main Event <div class="toggle">+</div></div>
+						<div class="heading"><div class="toggle">+</div>Main Event</div>
 						<div class="content">
 							<div class="indPackDescription">
-								<ul>
-									<li>Workshop</li>
-									<li>Presentation</li>
-									<li>Keynote sponsor</li>
-									<li>Posts on Social Networks</li>
-									<li>Documentation on folders</li>
-									<li>Innovation Awards sponsorship</li>
-								</ul>
+                <table class="all-100">
+                  <tbody>
+                    <tr class="item">
+                    <td><div class="toggle">+</div>Dar Workshop</td><td>5€</td>
+                          <tr class="description"><td colspan="2" class="noPadding">
+                            <div class="shadow">
+                              <h3>Dar Workshop</h3>
+                              <p>Possibilidade de dar um Workshop a uma plateia de alunos que visitam o evento.</p>
+                            </div>
+                          </td></tr>
+                    </tr>
+                    <tr class="item alternate">
+                      <td><div class="toggle">+</div>Apresentação</td><td>5€</td>
+                            <tr class="description"><td colspan="2" class="noPadding">
+                              <div class="shadow">
+                                <h3>Apresentação</h3>
+                          <p>Apresentação da empresa para uma plateia de alunos que visitam o evento.         Permitem que a empresa dê a conhecer aos alunos a sua área de trabalho, os projectos em que estão envolvidos e oportunidades de emprego que existem na empresa.</p>
+                          <ul style="list-style-type:disc;">
+                          <li>É uma sessão de 45 minutos divididos da seguinte maneira:</li>
+                          <ol>
+                          <li>5 minutos para a empresa se dar a conhecer.</li>
+                          <li>
+                          30 minutos de apresentação (Preferência por oradores Engenheiros e ex-alunos de LEIC/IST)</li>
+                          <li>Apresentações semi-técnicas costumam ser preferidos pelos alunos.</li>
+                          <li>10 minutos para perguntas e respostas.</li>
+
+                          </ol>
+                          <li>Nas salas do Centro de Congressos (com capacidade para 50 ou 70 lugares).</li>
+                        </ul>
+                        </div>
+                            </td></tr>
+                    </tr>
+                    <tr class="item">
+                    <td><div class="toggle">+</div>Patrocinio de Palestra</td><td>5€</td>
+                          <tr class="description"><td colspan="2" class="noPadding">
+                            <div class="shadow">
+                              <h3>Patrocionio de Palestra</h3>
+                        <p>Referência à empresa no ínicio e fim da palestra, logo nos materiais a referir “sponsored by” e logo fixo no stream. Outras formas de patrocínio da palestra poderão ser consideradas com a organização.</p>
+                      </div>
+                          </td></tr>
+                  </tr>
+                  <tr class="item alternate">
+                    <td><div class="toggle">+</div>Post(s) Personalizado nas Redes Sociais</td><td>5€</td>
+                          <tr class="description"><td colspan="2" class="noPadding">
+                            <div class="shadow">
+                              <h3>Post(s) Personalizado nas Redes Sociais</h3>
+                        <p>Colocação de um ou mais posts, personalizados de acordo com os critérios da empresa, nas redes sociais da SINFO.</p>
+                      </div>
+                          </td></tr>
+                  </tr>
+                  <tr class="item">
+                    <td><div class="toggle">+</div>Documentation in the folders</td><td>5€</td>
+                          <tr class="description"><td colspan="2" class="noPadding">
+                            <div class="shadow">
+                              <h3>Documentation in the folders</h3>
+                        <p>Possibility to include in the folders distributed for free during the event documentation, brochures,<br>
+                        or other information on your company.</p>
+                      </div>
+                          </td></tr>
+                  </tr>
+                  <tr class="item alternate">
+                    <td><div class="toggle">+</div>Innovation Awards Sponsorship</td><td>5€</td>
+                          <tr class="description"><td colspan="2" class="noPadding">
+                            <div class="shadow">
+                              <h3>Innovation Awards Sponsorship</h3>
+                        <p>Colocação de um ou mais posts, personalizados de acordo com os critérios da empresa, nas redes sociais da SINFO.</p>
+                      </div>
+                          </td></tr>
+                  </tr>
+                  <tr class="item">
+                    <td><div class="toggle">+</div>Stand 1 dia</td><td>1</td>
+                          <tr class="description"><td colspan="2" class="noPadding">
+                            <div class="shadow">
+                              <h3>Stand 1 dia</h3>
+                        <p>Possibilidade de colocar um stand durante o evento ou fora deste durante um dos eventos organizados pela SINFO, noutra data, dentro ou fora do Instituto Superior Técnico.
+                        </p>
+                        <li>Dimensões 3 x 3 x 2,5 metros</li>
+                        <li>Alcatifado.</li>
+                        <li>Parede atrás, e dos lados caso o stand esteja ao lado de um outro stand.</li>
+                        <li>Ficha electrica tripla.</li>
+                        <li>3 focos de luz.</li>
+                        <li>Lettering com o nome da empresa.</li>
+                        <li>2 mesas</li>
+                        <li>2 cadeiras</li>
+                        </div>
+                          </td></tr>
+                  </tr>
+                  <tr class="item alternate">
+                    <td><div class="toggle">+</div>Stand 2 dias</td><td>3€</td>
+                          <tr class="description"><td colspan="2" class="noPadding">
+                            <div class="shadow">
+                              <h3>Stand 2 dias</h3>
+                        <p>Possibilidade de colocar um stand durante o evento ou fora deste durante um dos eventos organizados pela SINFO, noutra data, dentro ou fora do Instituto Superior Técnico.
+                        </p>
+                        <li>Dimensões 3 x 3 x 2,5 metros</li>
+                        <li>Alcatifado.</li>
+                        <li>Parede atrás, e dos lados caso o stand esteja ao lado de um outro stand.</li>
+                        <li>Ficha electrica tripla.</li>
+                        <li>3 focos de luz.</li>
+                        <li>Lettering com o nome da empresa.</li>
+                        <li>2 mesas</li>
+                        <li>2 cadeiras</li>
+                        </div>
+                          </td></tr>
+                  </tr>
+                   <tr class="item">
+                    <td><div class="toggle">+</div>Stand 3 dias</td><td>1</td>
+                          <tr class="description"><td colspan="2" class="noPadding">
+                            <div class="shadow">
+                              <h3>Stand 3 dias</h3>
+                        <p>Possibilidade de colocar um stand durante o evento ou fora deste durante um dos eventos organizados pela SINFO, noutra data, dentro ou fora do Instituto Superior Técnico.
+                        </p>
+                        <li>Dimensões 3 x 3 x 2,5 metros</li>
+                        <li>Alcatifado.</li>
+                        <li>Parede atrás, e dos lados caso o stand esteja ao lado de um outro stand.</li>
+                        <li>Ficha electrica tripla.</li>
+                        <li>3 focos de luz.</li>
+                        <li>Lettering com o nome da empresa.</li>
+                        <li>2 mesas</li>
+                        <li>2 cadeiras</li>
+                        </div>
+                          </td></tr>
+                  </tr>
+                  <tr class="item alternate">
+                    <td><div class="toggle">+</div>Stand 4 dias</td><td>3€</td>
+                          <tr class="description"><td colspan="2" class="noPadding">
+                            <div class="shadow">
+                              <h3>Stand 4 dias</h3>
+                        <p>Possibilidade de colocar um stand durante o evento ou fora deste durante um dos eventos organizados pela SINFO, noutra data, dentro ou fora do Instituto Superior Técnico.
+                        </p>
+                        <li>Dimensões 3 x 3 x 2,5 metros</li>
+                        <li>Alcatifado.</li>
+                        <li>Parede atrás, e dos lados caso o stand esteja ao lado de um outro stand.</li>
+                        <li>Ficha electrica tripla.</li>
+                        <li>3 focos de luz.</li>
+                        <li>Lettering com o nome da empresa.</li>
+                        <li>2 mesas</li>
+                        <li>2 cadeiras</li>
+                        </div>
+                          </td></tr>
+                  </tr>
+                  </tbody>
+                </table>
 							</div>
 						</div>
 					</div>
 					<div class="container">
-						<div class="heading">Publicidade<div class="toggle">+</div></div>
-						<div class="content">
-							<div class="indPackDescription">
-								<ul>
-									<li>Logo in our site</li>
-									<li>Logo in our folders</li>
-									<li>Logo in our posters</li>
-									<li>Logo in our banners</li>
-									<li>Logo in the individuals</li>
-									<li>Logo in the placemats</li>
-								</ul>
-							</div>
-						</div>
+						<div class="heading"><div class="toggle">+</div>Publicidade</div>
+            <div class="content">
+              <div class="indPackDescription">
+                <table class="all-100">
+                  <tbody>
+                    <tr class="item">
+                      <td><div class="toggle">+</div>Logo in our website</td><td>1€</td>
+                            <tr class="description"><td colspan="2" class="noPadding">
+                              <div class="shadow">
+                                <h3>Logo in our website</h3>
+                          <p>Logotipo no site na secção dos patrocinadores do evento.</p>
+                        </div>
+                            </td></tr>
+                    </tr>
+                    <tr class="item alternate">
+                    <td><div class="toggle">+</div>Dar Workshop</td><td>5€</td>
+                          <tr class="description"><td colspan="2" class="noPadding">
+                            <div class="shadow">
+                              <h3>Dar Workshop</h3>
+                              <p>Possibilidade de dar um Workshop a uma plateia de alunos que visitam o evento.</p>
+                            </div>
+                          </td></tr>
+                    </tr>
+                    <tr class="item">
+                    <td><div class="toggle">+</div>Logo on folders</td><td>3€</td>
+                          <tr class="description"><td colspan="2" class="noPadding">
+                            <div class="shadow">
+                              <h3>Logo on folders</h3>
+                        <p>Your company's logo will be included in the folders distributed for free during the event.<br>
+                        The folders include the event program and informative documentation of participating companies.</p>
+                      </div>
+                          </td></tr>
+                  </tr>
+                  <tr class="item alternate">
+                    <td><div class="toggle">+</div>Logo on posters</td><td>2€</td>
+                          <tr class="description"><td colspan="2" class="noPadding">
+                            <div class="shadow">
+                              <h3>Logo on posters</h3>
+                        <p>The company's logo will be included in all posters posted at IST, other major colleges in our country and<br>
+                        the advertising partners SINFO.</p>
+                      </div>
+                          </td></tr>
+                  </tr>
+                  <tr class="item">
+                    <td><div class="toggle">+</div>Logo on banners</td><td>5€</td>
+                          <tr class="description"><td colspan="2" class="noPadding">
+                            <div class="shadow">
+                              <h3>Logo on banners</h3>
+                        <p>The company's logo will be included in all banners that we have at campus gates as well as in several<br>
+                        campus buildings.</p>
+                        <p><small>Banner placed at the main entrance of the IST (at Alameda campus) in the nineteenth edition of SINFO.</small></p>
+                      </div>
+                          </td></tr>
+                  </tr>
+                  <tr class="item alternate">
+                    <td><div class="toggle">+</div>Logo on placemats</td><td>4€</td>
+                          <tr class="description"><td colspan="2" class="noPadding">
+                            <div class="shadow">
+                              <h3>Logo on placemats</h3>
+                        <p>The company's logo will be placed in individual placemats.</p>
+                        <p>Placemats will be placed in the week prior to the event and the week of the event at:</p>
+                        <ul>
+                          <li>All the IST canteens.</li>
+                          <li>Other Lisbon universities' canteens.</li>
+                        </ul>
+                      </div>
+                          </td></tr>
+                  </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
 					</div>
 
 					<h3>Benefits for the participating companies</h3>
