highlighted CV in benefits

--- a/sponsor.html
+++ b/sponsor.html
@@ -763,7 +763,7 @@
 
 					<h3>Benefits for the participating companies</h3>
 					<ul>
-						<li>The participants' CVs, for companies who purchased packages.</li>
+						<li>The participants' <b>CVs</b>, for companies who purchased packages.</li>
 						<li>Statistical data and opinions of visitors regarding the participation of the company, gathered from surveys carried out, during the event.</li>
 						<li>Coffee-break for the company speakers.</li>
 						<li>Company presentation slides can be made available, to the general public, in our website.</li>
