--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
     	<div class="column-group gutters">
     		<div class="all-60 medium-100 small-100">
     			<div id="videoReveal" style="display:none;">
-    				<iframe width="560" height="315" src="http://www.youtube.com/embed/ogYIiPJI1HA" frameborder="0" allowfullscreen></iframe>
+    				<iframe width="560" height="315" src="http://www.youtube.com/embed/WKScK5O6rTw" frameborder="0" allowfullscreen></iframe>
     			</div>
     		</div>
     		<div class="all-35 medium-100 small-100">
