--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
         <h1><a href="#sponsors" title="Sponsor us!">Sponsor us</a></h1>
       <div class="description">
         Meet your potential future employees, from a college with excellent national and international renown.<br>
-        <a class="transparent-button" href="sponsor.php">Get in touch!</a></div>
+        <a class="transparent-button" href="sponsor.html">Get in touch!</a></div>
       </div>
     </div>
 
