Started updating sponsors page to english

--- a/sponsor.html
+++ b/sponsor.html
@@ -46,7 +46,7 @@
 		<script type="text/javascript" src="js/vendor/ink/autoload.js"></script>
 
 		<!-- my stuff -->
-		<link rel="stylesheet" type="text/css" href="css/sponsors/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/sponsors/styles.css">
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 		<script type="text/javascript" src="js/sponsors/jquery.scrollTo.min.js"></script>
 		<script type="text/javascript" src="js/sponsors/jquery.localScroll.min.js"></script>
@@ -204,50 +204,52 @@
 									</thead>
 									<tbody>
 									<tr class="item">
-										<td><div class="toggle">+</div>Patrocinio de Palestra</td><td>-</td><td>-</td><td>-</td><td>√</td>
+										<td><div class="toggle">+</div>Keynote Sponsorship</td><td>-</td><td>-</td><td>-</td><td>√</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
-								            	<h3>Patrocionio de Palestra</h3>
-												<p>Referência à empresa no ínicio e fim da palestra, logo nos materiais a referir “sponsored by” e logo fixo no stream. Outras formas de patrocínio da palestra poderão ser consideradas com a organização.</p>
+								            	<h3>Keynote Sponsorship</h3>
+												<p>The sponsorship and the company’s name and logo are mentioned and shown both in the begining and at the end of the talk, during the prizes draw. The Company logo or name will be on our publicity materials clearly indicating the “Sponsored by” to the specific keynote. The logo will also shown in full during our live stream, seen by more than 20.000 spectators live (data from 21st SINFO’s Jason Gregory Keynote). Other forms of keynote sponsorship can be discussed with the organizers.</p>
 											</div>
 							            </td></tr>
 									</tr>
 									<tr class="item alternate">
-										<td><div class="toggle">+</div>Apresentação</td><td>-</td><td>√</td><td>√</td><td>√</td>
+										<td><div class="toggle">+</div>Presentation</td><td>-</td><td>√</td><td>√</td><td>√</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
-								            	<h3>Apresentação</h3>
-												<p>Apresentação da empresa para uma plateia de alunos que visitam o evento.					Permitem que a empresa dê a conhecer aos alunos a sua área de trabalho, os projectos em que estão envolvidos e oportunidades de emprego que existem na empresa.</p>
+								            	<h3>Presentation</h3>
+												<p>You will be able to make a company’s presentation to an audience of students that will be at the event. The presentation allows the company to introduce and explain to the students their field of work, the projects they are or were working on, but also the job opportunities that might be available to the students in the company.</p>
 												<ul style="list-style-type:disc;">
-												<li>É uma sessão de 45 minutos divididos da seguinte maneira:</li>
+												<li>45min session divided as such:</li>
 												<ol>
 												<li>5 minutos para a empresa se dar a conhecer.</li>
 												<li>
-												30 minutos de apresentação (Preferência por oradores Engenheiros e ex-alunos de LEIC/IST)</li>
-												<li>Apresentações semi-técnicas costumam ser preferidos pelos alunos.</li>
-												<li>10 minutos para perguntas e respostas.</li>
-
+												5min to present  the company and get the students to learn a little more about the company itself;</li>
+												<li>30min presentation (Preferably by Engineers or LEIC/IST Alumni);</li>
+												<li>Semi-technical presentations tend to be preferred by the students;</li>
+                        <li>10min for Q&A.</li>
 												</ol>
-												<li>Nas salas do Centro de Congressos (com capacidade para 50 ou 70 lugares).</li>
+												<li>Congress Center – rooms with capacity for 50 or 70 students.</li>
 											</ul>
 											</div>
 							            </td></tr>
 									</tr>
 									<tr class="item">
-										<td><div class="toggle">+</div>Stand X dias Y Locais</td><td>-</td><td>1</td><td>2</td><td>3</td>
+										<td><div class="toggle">+</div>Stand for X days in Y places</td><td>-</td><td>1</td><td>2</td><td>3</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 								            <div class="shadow">
-								            	<h3>Stand X dias Y Locais </h3>
-												<p>Possibilidade de colocar um stand durante o evento ou fora deste durante um dos eventos organizados pela SINFO, noutra data, dentro ou fora do Instituto Superior Técnico.
+								            	<h3>Stand for X days in Y places</h3>
+												<p>You will have the possibility to rent a (or bring your own) stand during the event, at Instituto Superior Técnico. Additionally, with “+University” this presence can be extended to more universities and more days, reaching an even higher number of students and potential candidates.
 												</p>
-												<li>Dimensões 3 x 3 x 2,5 metros</li>
-												<li>Alcatifado.</li>
-												<li>Parede atrás, e dos lados caso o stand esteja ao lado de um outro stand.</li>
-												<li>Ficha electrica tripla.</li>
-												<li>3 focos de luz.</li>
-												<li>Lettering com o nome da empresa.</li>
-												<li>2 mesas</li>
-												<li>2 cadeiras</li>
+                        <p>IST stand specifications:</p>
+												<li>Dimensions: 3x3x2.5m;</li>
+												<li>Carpeted;</li>
+												<li>Back wall. (Side walls in case of being next to another stand);</li>
+												<li>Electricity - three (3) plugs;</li>
+												<li>Lights - three (3) spot lights;</li>
+												<li>Lettering with the company’s name;</li>
+												<li>Two (2) tables;</li>
+												<li>Two (2) chairs;</li>
+                        <li>In the case of use of your own stand, the walls and lettering are removed.</li>
 												</div>
 							            </td></tr>
 									</tr>
