Giving a Workshop and Workshop's sponsorship translation

--- a/sponsor.html
+++ b/sponsor.html
@@ -254,19 +254,19 @@
 							            </td></tr>
 									</tr>
 									<tr class="item alternate">
-										<td><div class="toggle">+</div>Dar Workshop</td><td>-</td><td>√</td><td>√</td><td>√</td>
+										<td><div class="toggle">+</div>Giving a Workshop</td><td>-</td><td>√</td><td>√</td><td>√</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
-								            	<h3>Dar Workshop</h3>
-												<p>Possibilidade de dar um Workshop a uma plateia de alunos que visitam o evento.</p>
+								            	<h3>Giving a Workshop</h3>
+												<p>You will have the possibility to give a Workshop to and audience of students that are present during the event.</p>
 											</div>
-							            </td></tr>
+							       </td></tr>
 									</tr>
 									<tr class="item">
-										<td><div class="toggle">+</div>Patrocinar Workshop</td><td>-</td><td>√</td><td>√</td><td>√</td>
+										<td><div class="toggle">+</div>Workshop’s Sponsorship</td><td>-</td><td>√</td><td>√</td><td>√</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
-								            	<h3>Patrocinar Workshop</h3><p>Patrocínio de um dos Workshops organizados pela SINFO durante o evento.</p>
+								            	<h3>Workshop’s Sponsorship</h3><p>You will be the sponsor one of many Workshops organized by SINFO during the event.</p>
 											</div>
 							            </td></tr>
 									</tr>
