custom social Network Post(s) and pitch in-between talks tranlation

--- a/sponsor.html
+++ b/sponsor.html
@@ -271,11 +271,11 @@
 							            </td></tr>
 									</tr>
 									<tr class="item alternate">
-										<td><div class="toggle">+</div>Post(s) Personalizado nas Redes Sociais</td><td>-</td><td>1</td><td>2</td><td>3</td>
+										<td><div class="toggle">+</div>Custom Social Network Post(s)</td><td>-</td><td>1</td><td>2</td><td>3</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
-								            	<h3>Post(s) Personalizado nas Redes Sociais</h3>
-												<p>Colocação de um ou mais posts, personalizados de acordo com os critérios da empresa, nas redes sociais da SINFO.</p>
+								            	<h3>Custom Social Network Post(s)</h3>
+												<p>You can write a post, custom it, according to the company’s criteria and we’ll post it for you on our social networks.</p>
 											</div>
 							            </td></tr>
 									</tr>
@@ -284,7 +284,7 @@
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
 								            	<h3>Pitch in-between talks</h3>
-												<p>Realização de uma pitch de apresentação da empresa ou de um tema à escolha durante os intervalos entre as palestras.</p>
+												<p>You’ll the possibility to make a company’s presentation pitch or of any other subject of your choosing during the breaks between the afternoon talks.</p>
 											</div>
 							            </td></tr>
 									</tr>
