Custom activity and end-of-the-day meet up

--- a/sponsor.html
+++ b/sponsor.html
@@ -289,20 +289,20 @@
 							            </td></tr>
 									</tr>
 									<tr class="item alternate">
-										<td><div class="toggle">+</div>Actividade personalizada</td><td>-</td><td>-</td><td>√</td><td>√</td>
+										<td><div class="toggle">+</div>Custom Activity</td><td>-</td><td>-</td><td>√</td><td>√</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
-								            	<h3>Actividade personalizada</h3>
-												<p>A empresa poderá sugerir e acordar com a SINFO a realização de uma actividade personalizada, moldada aos interesses da empresa, durante o evento.</p>
+								            	<h3>Custom Activity</h3>
+												<p>You can suggest us, the realization of a custom activity that you’ll perform during the event, within the interest of the company. This has to be approved by SINFO’s team.</p>
 											</div>
-							            </td></tr>
+							     </td></tr>
 									</tr>
 									<tr class="item">
-										<td><div class="toggle">+</div>Meetup ao final do dia</td><td>-</td><td>√</td><td>√</td><td>√</td>
+										<td><div class="toggle">+</div>End-of-the-day meet up</td><td>-</td><td>√</td><td>√</td><td>√</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
-								            	<h3>Meetup ao final do dia</h3>
-												<p>Realização de um encontro informal com alguns dos participantes, no final de um dos dias do evento.</p>
+								            	<h3>End-of-the-day meet up</h3>
+												<p>You’ll be able to gather in an informal way with some of the participants of the event at the end of one of the days.</p>
 											</div>
 							            </td></tr>
 									</tr>
