Item menu and Cover's Logo translation

--- a/sponsor.html
+++ b/sponsor.html
@@ -330,14 +330,14 @@
 									</tbody>
 								</table>
 							</div>
-							<div class="heading"><div class="toggleHead">+</div>Publicidade</div>
+							<div class="heading"><div class="toggleHead">+</div>Publicity</div>
 							<div class="content">
 								<div class="PackageContent">Package Content</div>
 								<table class="all-100">
 									<thead>
 										<tr>
 					            <th class="all-40">Item</th>
-					            <th class="all-15">Baixa</th>
+					            <th class="all-15">Minimum</th>
 					            <th class="all-15">Média</th>
 					            <th class="all-15">Alta</th>
 					            <th class="all-15">Exclusiva</th>
@@ -345,12 +345,11 @@
 									</thead>
 									<tbody>
 									<tr class="item">
-										<td><div class="toggle">+</div>Logo on folders</td><td>-</td><td>M</td><td>L</td><td>XL</td>
+										<td><div class="toggle">+</div>Cover's logo</td><td>-</td><td>M</td><td>L</td><td>XL</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
-								            	<h3>Logo on folders</h3>
-												<p>Your company's logo will be included in the folders distributed for free during the event.<br>
-												The folders include the event program and informative documentation of participating companies.</p>
+								            	<h3>Cover's logo</h3>
+												<p>The Company logo will be on the many covers we give out to the students during the event. The covers include the event's program and several pamphlets and company's information</p>
 											</div>
 							            </td></tr>
 									</tr>
