presentation posts and logo on the website tranlation

--- a/sponsor.html
+++ b/sponsor.html
@@ -345,7 +345,7 @@
 									</thead>
 									<tbody>
 									<tr class="item">
-										<td><div class="toggle">+</div>Cover's logo</td><td>-</td><td>M</td><td>L</td><td>XL</td>
+										<td><div class="toggle">+</div>Cover's logo</td><td>S</td><td>M</td><td>L</td><td>XL</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
 								            	<h3>Cover's logo</h3>
@@ -354,11 +354,11 @@
 							            </td></tr>
 									</tr>
 									<tr class="item alternate">
-										<td><div class="toggle">+</div>Post(s) on Social Networks</td><td>-</td><td>1</td><td>2</td><td>3</td>
+										<td><div class="toggle">+</div>Presentation posts on our Social Networks</td><td>-</td><td>1</td><td>2</td><td>3</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
-								            	<h3>Post(s) on Social Networks</h3>
-												<p>Posting ads on our pages:</p>
+								            	<h3>Presentation posts on our Social Networks</h3>
+												<p>We will make a post on our social networks with a brief presentation of the company for everyone to see.</p>
 												<ul>
 													<li><a href="https://www.facebook.com/sinfoist">Facebook</a> - post size limit: 500 characters.</li>
 													<li><a href="https://twitter.com/sinfo_ist">Twitter</a> - post size limit: 140 characters.</li>
@@ -367,13 +367,13 @@
 							            </td></tr>
 									</tr>
 									<tr class="item">
-										<td><div class="toggle">+</div>Logo in our website</td><td>-</td><td>M</td><td>L</td><td>XL</td>
+										<td><div class="toggle">+</div>Logo on the website</td><td>-</td><td>M</td><td>L</td><td>XL</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
-								            	<h3>Logo in our website</h3>
-												<p>Logotipo no site na secção dos patrocinadores do evento.</p>
+								            	<h3>Logo on the website</h3>
+												<p>The Company logo will be on our Sponsor's sections.</p>
 											</div>
-							            </td></tr>
+							      </td></tr>
 									</tr>
 									<tr class="item alternate">
 										<td><div class="toggle">+</div>Documentation in the folders</td><td>-</td><td>M</td><td>L</td><td>XL</td>
