Cover's documentation and swhocase logo translation

--- a/sponsor.html
+++ b/sponsor.html
@@ -345,7 +345,7 @@
 									</thead>
 									<tbody>
 									<tr class="item">
-										<td><div class="toggle">+</div>Cover's logo</td><td>S</td><td>M</td><td>L</td><td>XL</td>
+										<td><div class="toggle">+</div>Cover's logo</td><td>S</td><td>M</td><td>L</td><td>L</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
 								            	<h3>Cover's logo</h3>
@@ -367,7 +367,7 @@
 							            </td></tr>
 									</tr>
 									<tr class="item">
-										<td><div class="toggle">+</div>Logo on the website</td><td>-</td><td>M</td><td>L</td><td>XL</td>
+										<td><div class="toggle">+</div>Logo on the website</td><td>-</td><td>M</td><td>L</td><td>L</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
 								            	<h3>Logo on the website</h3>
@@ -376,22 +376,20 @@
 							      </td></tr>
 									</tr>
 									<tr class="item alternate">
-										<td><div class="toggle">+</div>Documentation in the folders</td><td>-</td><td>M</td><td>L</td><td>XL</td>
+										<td><div class="toggle">+</div>Cover's documentation</td><td>-</td><td>M</td><td>L</td><td>L</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
-								            	<h3>Documentation in the folders</h3>
-												<p>Possibility to include in the folders distributed for free during the event documentation, brochures,<br>
-												or other information on your company.</p>
+								            	<h3>Cover's documentation</h3>
+												<p>The Company's documentation, pamphlets, or other element related to the Company will be included in the covers we give out during the event.</p>
 											</div>
-							            </td></tr>
+							      </td></tr>
 									</tr>
 									<tr class="item">
-										<td><div class="toggle">+</div>Logo Showcase</td><td>-</td><td>M</td><td>L</td><td>XL</td>
+										<td><div class="toggle">+</div>Showcase logo</td><td>-</td><td>M</td><td>L</td><td>XL</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
-								            	<h3>Logo Showcase</h3>
-												<p>The company's logo will appear on the Showcase panel.<br>
-												The Showcase is a space, in the technology exposition, reserved for interaction with speakers,<br>exhibits and technology demonstrations.</p>
+								            	<h3>Showcase logo</h3>
+												<p>The Company logo will be on our Showcase panel. The Showcase is at the Tech Expo, reserved specially for the speaker's Q&A, exhibitions, and technological demonstrations happening during the event.</p>
 											</div>
 							            </td></tr>
 									</tr>
