Logo on our posters and tray mats translation

--- a/sponsor.html
+++ b/sponsor.html
@@ -367,7 +367,7 @@
 							            </td></tr>
 									</tr>
 									<tr class="item">
-										<td><div class="toggle">+</div>Logo on the website</td><td>-</td><td>M</td><td>L</td><td>L</td>
+										<td><div class="toggle">+</div>Logo on the website</td><td>S</td><td>M</td><td>L</td><td>L</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
 								            	<h3>Logo on the website</h3>
@@ -385,7 +385,7 @@
 							      </td></tr>
 									</tr>
 									<tr class="item">
-										<td><div class="toggle">+</div>Showcase logo</td><td>-</td><td>M</td><td>L</td><td>XL</td>
+										<td><div class="toggle">+</div>Showcase logo</td><td>-</td><td>M</td><td>L</td><td>L</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
 								            	<h3>Showcase logo</h3>
@@ -394,12 +394,11 @@
 							            </td></tr>
 									</tr>
 									<tr class="item alternate">
-										<td><div class="toggle">+</div>Logo on posters</td><td>-</td><td>M</td><td>L</td><td>XL</td>
+										<td><div class="toggle">+</div>Logo on our poster</td><td>-</td><td>M</td><td>L</td><td>L</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
-								            	<h3>Logo on posters</h3>
-												<p>The company's logo will be included in all posters posted at IST, other major colleges in our country and<br>
-												the advertising partners SINFO.</p>
+								            	<h3>Logo on our poster</h3>
+												<p>The Company logo will be on our posters that will be hung at Instituto Superior Técnico and in many others Universities in the country.</p>
 											</div>
 							            </td></tr>
 									</tr>
@@ -407,12 +406,11 @@
 										<td><div class="toggle">+</div>Logo on placemats</td><td>-</td><td>M</td><td>L</td><td>XL</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
-								            	<h3>Logo on placemats</h3>
-												<p>The company's logo will be placed in individual placemats.</p>
-												<p>Placemats will be placed in the week prior to the event and the week of the event at:</p>
+								            	<h3>Logo on tray mats</h3>
+												<p>The Company logo will be on the tray mats distributed the week before throughout many universities and cafeterias:</p>
 												<ul>
-													<li>All the IST canteens.</li>
-													<li>Other Lisbon universities' canteens.</li>
+													<li>Every Técnico’s cafeterias;</li>
+													<li>ISEL, Cidade Universitária and other cafeterias.</li>
 												</ul>
 											</div>
 							            </td></tr>
