Logo on our programs and t-shirts translation

--- a/sponsor.html
+++ b/sponsor.html
@@ -403,7 +403,7 @@
 							            </td></tr>
 									</tr>
 									<tr class="item">
-										<td><div class="toggle">+</div>Logo on placemats</td><td>-</td><td>M</td><td>L</td><td>XL</td>
+										<td><div class="toggle">+</div>Logo on tray mats</td><td>-</td><td>M</td><td>L</td><td>L</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
 								            	<h3>Logo on tray mats</h3>
@@ -416,21 +416,21 @@
 							            </td></tr>
 									</tr>
 									<tr class="item alternate">
-										<td><div class="toggle">+</div>Logo on flyers</td><td>-</td><td>M</td><td>L</td><td>XL</td>
+										<td><div class="toggle">+</div>Logo on our programs</td><td>-</td><td>M</td><td>L</td><td>L</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
-								            	<h3>Logo on flyers</h3>
-												<p>Inclusion of your company logo in all programs distributed for free before and during the event.</p>
+								            	<h3>Logo on our programs</h3>
+												<p>The Company logo will be on the event’s programs that we give out during it to every visitor</p>
 												<p><small>Timetable of twentieth edition of SINFO.</small></p>
 											</div>
 							            </td></tr>
 									</tr>
 									<tr class="item">
-										<td><div class="toggle">+</div>Logo on T-Shirts</td><td>-</td><td>M</td><td>L</td><td>XL</td>
+										<td><div class="toggle">+</div>T-shirt logo</td><td>-</td><td>-</td><td>L</td><td>XL</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
-								            	<h3>Logo on T-Shirts</h3>
-												<p>The company's logo will be present in the back of every sold T-Shirt.</p>
+								            	<h3>T-shirt logo</h3>
+												<p>The Company logo will be on the back of our t-shirts that are sold at SINFO’s stand during the event.</p>
 											</div>
 							            </td></tr>
 									</tr>
